<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <data>

        <import type="android.view.View" />

        <variable
            name="viewmodel"
            type="br.pro.lmit.marvelcharacters.ui.characterdetails.CharacterDetailsViewModel" />
    </data>


    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.characterlist.CharacterListFragment">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:visibility="visible">

            <LinearLayout
                android:id="@+id/content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="@{viewmodel.loading ? View.GONE : viewmodel.character == null ? View.GONE : View.VISIBLE}">

                <ImageView
                    android:id="@+id/thumbnail"
                    android:layout_width="match_parent"
                    android:layout_height="192dp"
                    android:layout_marginBottom="18dp"
                    android:scaleType="fitXY"
                    app:imageUrl="@{viewmodel.character.thumbnail.path + '.' + viewmodel.character.thumbnail.extension}"
                    tools:srcCompat="@tools:sample/avatars" />

                <TextView
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="20dp"
                    android:text="@{viewmodel.character.name}"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                    tools:text="[NAME]" />

                <TextView
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="28dp"
                    android:text="@{viewmodel.character.description}"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                    tools:text="[SHORT_DESCRIPTION]" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/comics"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Overline" />

                <TextView
                    android:id="@+id/comics"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="4dp"
                    android:text="@{String.valueOf(viewmodel.character.comics.returned)}"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/series"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Overline" />

                <TextView
                    android:id="@+id/series"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="4dp"
                    android:text="@{String.valueOf(viewmodel.character.series.returned)}"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/stories"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Overline" />

                <TextView
                    android:id="@+id/stories"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="4dp"
                    android:text="@{String.valueOf(viewmodel.character.stories.returned)}"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/events"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Overline" />

                <TextView
                    android:id="@+id/events"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="4dp"
                    android:text="@{String.valueOf(viewmodel.character.events.returned)}"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="24dp"
                    android:orientation="horizontal">

                    <com.google.android.material.button.MaterialButton
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:onClick="@{() -> viewmodel.openWeb(viewmodel.character)}"
                        android:text="@string/details" />

                    <com.google.android.material.button.MaterialButton
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="@{() -> viewmodel.openWiki(viewmodel.character)}"
                        android:text="@string/wiki" />

                </LinearLayout>

            </LinearLayout>
        </ScrollView>

        <FrameLayout
            android:id="@+id/loading_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:visibility="@{viewmodel.loading ? View.VISIBLE : View.GONE}"
            tools:visibility="visible">

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />

        </FrameLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>


</layout>